# ic-vectune

./: .gitignore  Cargo.toml  README.md  canister_ids.json  check_wasm_binary.sh  dfx.json  package-lock.json  package.json
query_set/gt/: deep100M_groundtruth.ivecs  deep10M_groundtruth.ivecs  deep1M_groundtruth.ivecs
src/ic-vectune-backend/: Cargo.toml
src/ic-vectune-frontend/: package.json
src/ic-vectune-frontend/src/: App.js
src/instance/: Cargo.toml  instance.did
src/instance/src/: auth.rs  build_api.rs  consts.rs  graph.rs  ic_types.rs  lib.rs  point.rs  service_api.rs  simd_point.rs  sysytem_api.rs  thread_locals.rs  types.rs
src/on_browser_builder/: Cargo.toml
src/on_browser_builder/models/: download.sh
src/on_browser_builder/src/: lib.rs  points.rs
