[package]
name = "instance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"]}
candid = "0.10"
ic-cdk = "0.15.0"
ic-cdk-timers = "0.9.0" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.5"
serde = { version =  "1.0", features = ["derive"] }
bincode = "1.3"
# ssd-vectune = {path = "../../../ssd-vectune", features = []}
# vectune = {path = "../../../vectune", features = []}
vectune = {git = "https://github.com/ClankPan/Vectune", rev = "d785917e973dbb011992ed3ee98406c707d7ca80", features = []}
ssd-vectune = {git = "https://github.com/ClankPan/ssd-vectune", rev = "0c5ae4614a639f7a83765ca08916036a5f5a357c", features = []}
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8", features = ["small_rng"] }
bytesize = "1.3.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"

[build]
target = ["wasm32-unknown-unknown"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]